--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "uvu tests",
+    "test:coverage": "c8 --include=src npm test"
   },
   "keywords": [],
   "author": "Daniil Sitdikov",
   "license": "MIT",
+  "engines": {
+    "node": ">=14.8.0"
+  },
   "devDependencies": {
+    "c8": "7.13.0",
     "uvu": "0.5.6"
   }
 }
