--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "uvu tests",
     "test:coverage": "c8 --include=src npm test"
   },
