--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
+    "dev:sample": "node ./sample/server.js",
     "test": "vitest run"
   },
   "keywords": [],
