--- a/samples/typescript/tsconfig.json
+++ b/samples/typescript/tsconfig.json
@@ -1,20 +1,15 @@
 {
   "compilerOptions": {
-    "declaration": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
     "alwaysStrict": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
-    "emitDecoratorMetadata": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "experimentalDecorators": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": true,
     "lib": ["es2017"],
-    "outDir": "dist/types",
+    "outDir": "dist",
     "target": "es6",
     "module": "commonjs",
     "esModuleInterop": true,
