--- a/samples/express/tsconfig.json
+++ b/samples/express/tsconfig.json
@@ -8,20 +8,14 @@
     "strictFunctionTypes": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "lib": [
-      "es2017"
-    ],
+    "lib": ["es2017"],
     "outDir": "dist",
     "target": "es6",
     "module": "commonjs",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
