--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:sandbox": "ts-node examples/sandbox/server.ts",
     "dev:sandbox:inspect": "node --loader ts-node --inspect examples/sandbox/server.ts",
     "test": "vitest run",
+    "lint": "eslint .",
     "test:coverage": "vitest run --coverage"
   },
   "module": "./esm/file-router.mjs",
@@ -20,7 +21,12 @@
     "import": "./esm/file-router.mjs",
     "require": "./cjs/file-router.js"
   },
-  "keywords": ["router", "file router", "routing", "express"],
+  "keywords": [
+    "router",
+    "file router",
+    "routing",
+    "express"
+  ],
   "author": "Daniil Sitdikov <hello.boriskas@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -42,9 +48,16 @@
     "@babel/preset-env": "7.21.5",
     "@babel/preset-typescript": "7.21.5",
     "@types/node": "20.1.4",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "@vitest/coverage-c8": "0.31.0",
     "babel-plugin-add-import-extension": "1.6.0",
     "cross-env": "7.0.3",
+    "eslint": "8.46.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "3.0.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
     "vitest": "0.31.0"
