--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "node-file-router",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A file-based routing for Node.js",
   "scripts": {
     "build:esm": "cross-env BABEL_ENV=esm babel src --extensions '.ts' --out-dir 'dist/esm' --out-file-extension .mjs --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'dist/cjs' --source-maps",
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist/types --rootDir src",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:types && node ./dev/scripts/copy-files.js",
-    "dev:link": "npm link ./dist",
+    "build": "pnpm build:cjs && pnpm build:esm && pnpm build:types && node ./dev/scripts/copy-files.js",
+    "dev:link": "pnpm link ./dist",
     "dev:sandbox": "ts-node examples/sandbox/server.ts",
     "dev:sandbox:inspect": "node --loader ts-node --inspect examples/sandbox/server.ts",
     "test": "vitest run",
@@ -17,6 +17,7 @@
   "module": "./esm/file-router.mjs",
   "main": "../cjs/file-router.js",
   "types": "./types/file-router.d.ts",
+  "files": ["build"],
   "exports": {
     "import": "./esm/file-router.mjs",
     "require": "./cjs/file-router.js"
