--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "1.0.5",
+    "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "4.7.4"
   },
   "browserslist": {
