--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-file-router",
-  "version": "0.1.4",
-  "description": "A file-based routing for Node.js",
+  "version": "0.2.0",
+  "description": "A powerful file-based routing for Node.js",
   "scripts": {
     "build:esm": "cross-env BABEL_ENV=esm babel src --extensions '.ts' --out-dir 'dist/esm' --out-file-extension .mjs --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts' --out-dir 'dist/cjs' --source-maps",
@@ -23,10 +23,11 @@
   },
   "keywords": [
     "nodejs",
+    "express",
+    "bun",
     "router",
     "file router",
-    "routing",
-    "express"
+    "routing"
   ],
   "author": "Daniil Sitdikov <hello.boriskas@gmail.com>",
   "license": "MIT",
