--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist/types --rootDir src",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prepare": "husky install"
   },
   "module": "./esm/file-router.mjs",
   "main": "../cjs/file-router.js",
@@ -49,6 +50,8 @@
     "@babel/plugin-transform-runtime": "7.21.4",
     "@babel/preset-env": "7.21.5",
     "@babel/preset-typescript": "7.21.5",
+    "@commitlint/cli": "17.7.2",
+    "@commitlint/config-conventional": "17.7.0",
     "@types/node": "20.1.4",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
@@ -59,6 +62,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.9.0",
     "eslint-plugin-prettier": "5.0.0",
+    "husky": "8.0.3",
     "prettier": "3.0.0",
     "ts-node-dev": "2.0.0",
     "typescript": "5.0.4",
