chore: fix codacy issues

--- a/examples/express/tsconfig.json
+++ b/examples/express/tsconfig.json
@@ -14,7 +14,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
