--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-file-router",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "A powerful file-based routing for Node.js",
   "scripts": {
     "dev:sandbox": "tsnd examples/sandbox/server.ts",
@@ -28,7 +28,8 @@
     "bun",
     "router",
     "file router",
-    "routing"
+    "routing",
+    "middleware"
   ],
   "author": "Daniil Sitdikov <hello.boriskas@gmail.com>",
   "license": "MIT",
