refactor(tests): moved from callback approach to sync one, add tests for http adapter

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist/types --rootDir src",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint src",
+    "lint": "eslint src tests",
     "prepare": "husky install"
   },
   "module": "./esm/index.mjs",
