chore: add node_modules to module dictionary

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
           ".js",
           ".ts"
         ],
+        "moduleDirectory": ["node_modules"],
         "paths": [
           "./src"
         ]
