--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,10 @@
     }
   },
   "rules": {
+    "import/no-unresolved": [
+      "error",
+      { "commonjs": true, "caseSensitive": true, "ignore": ["vitest"] }
+    ],
     "prettier/prettier": [
       "error",
       {
