--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-file-router",
   "version": "0.5.2",
-  "description": "A powerful file-based routing for Node.js",
+  "description": "A powerful file-based routing for Express.js, Bun, pure Node.js and more",
   "scripts": {
     "dev:sandbox": "tsnd examples/sandbox/server.ts",
     "dev:sandbox:inspect": "tsnd --inspect -- examples/sandbox/server.ts",
